# sdl-lua

./: .clang-format  .gitignore  CMakeLists.txt  SDL-MSYS.sh  sdl-lua.kdev4
apps/app01/: launch--no-console.cmd  launch--with-console.cmd  start.lua
apps/app02/: launch--no-console.cmd  launch--with-console.cmd  start.lua  utils.lua
apps/app03/: launch--no-console.cmd  launch--with-console.cmd  start.lua  utils.lua
apps/assets/ui/check-box/: box.xcf  box1.xcf
apps/common/: bit_operations.lua  deltatime.lua  draw.lua  image.lua  pointer.lua
apps/graphic/: 3d_app.lua  launch--no-console.cmd  launch--with-console.cmd  start.lua
apps/multi/: launch--no-console.cmd  launch--with-console.cmd  start.lua
src/: main.c
